--- a/Experiment Code/betaVAE.ipynb
+++ b/Experiment Code/betaVAE.ipynb
@@ -347,7 +347,7 @@
     "\n",
     "\n",
     "# ========================================================================= #\n",
-    "# shapes3d                                                                  #\n",
+    "# shapes3d run this code to download the dataset                           #\n",
     "# ========================================================================= #\n",
     "\n",
     "\n",
